# adapter-telegram

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python/: action.yaml
.github/workflows/: codecov.yml  pyright.yml
codegen/: __main__.py  generator.py  model.py  parse.py  utils.py
example/: called_api.py  dice.py  download.py  echo.py  inline.py  mention.py  photo.py  reply.py  sendxxx.py
nonebot/adapters/telegram/: __init__.py  adapter.py  api.py  bot.py  bot.pyi  config.py  event.py  exception.py  message.py  method.py  model.py  permission.py
nonebot_adapter_telegram/: __init__.py  bot.py  bot.pyi  config.py  event.py  message.py  model.py
tests/: conftest.py  test_bot.py  test_event.py  test_message.py  updates.json
