[project]
name = "nonebot-adapter-telegram"
version = "0.1.0b4"
description = "Telegram Adapter for NoneBot2"
authors = [{ name = "Jigsaw", email = "j1g5aw@foxmail.com" }]
dependencies = ["nonebot2<3.0.0,>=2.0.0b1", "anyio<4.0.0,>=3.6.2"]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["bot", "telegram"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://v2.nonebot.dev/"
repository = "https://github.com/nonebot/adapter-telegram"
documentation = "https://github.com/nonebot/adapter-telegram/MANUAL.md"

[tool.pdm.dev-dependencies]
nonebot = [
  "httpx<1.0.0,>=0.23.0",
  "fastapi<1.0.0,>=0.89.0",
  "nonebot2 @ git+https://github.com/nonebot/nonebot2.git",
]
pre-commit = ["pycln", "isort", "black", "nonemoji", "pre-commit"]

[tool.pdm.scripts]
post_install = "pre-commit install"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pycln]
path = "."
all = false

[tool.pdm.build]
includes = ["nonebot"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
